# google-analytics-mcp

./: .dockerignore  .env.example  .env.test  .gitignore  COOLIFY_DEPLOYMENT.md  Dockerfile  N8N_INTEGRATION.md  N8N_MCP_INTEGRATION.md  N8N_MCP_STREAMABLE.md  README.md  claude-config-template.json  claude_desktop.config.example  docker-compose.yml  ga4_dimensions.json  ga4_http_server.py  ga4_mcp_server.py  ga4_metrics.json  mcp_http_bridge.py  mcp_http_streamable.py  pyproject.toml  requirements.txt  test_mcp_flow.sh  test_sse_buffering.sh
